[package]
name = "sph2mm"
description = "Add an AMR background to an existing SPH initial conditions file"
version = "0.4.1"
edition = "2021"
license = "LGPL-3.0+"
readme = "readme.md"
authors = ["Yolan Uyttenhove"]
repository = "https://github.com/yuyttenhove/sph2mm.git"
keywords = ["physics", "moving_mesh", "SPH"]
categories = ["simulation", "science", "mathematics"]
exclude = ["test_ics", "launch.json"]

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
glam = "0.27"
hdf5 = "0.8.1"
indicatif = "0.17.11"
meshless_voronoi = { version = "0.7.2", features = ["rayon"] }
ndarray = "0.15"
rand = "0.9.0"
rstar = "0.12.2"
